Issue #27039: Fixed bytearray.remove() for values greater than 127. Patch by Joe Jevnik.